--- a/projetos/01-criando-uma-plataforma-de-perguntas-e-respostas-com-mysql/views/index.ejs
+++ b/projetos/01-criando-uma-plataforma-de-perguntas-e-respostas-com-mysql/views/index.ejs
@@ -10,5 +10,8 @@
 		<h1>Guia perguntas!</h1>
 		<hr>
 		<h3>Lista de perguntas</h3>
+		<p>Nome: <%= nome %></p>
+		<p>Linguagem favorita: <%= lang %></p>
+		<p>Profissão: <%= profissao %> </p>
 	</body>
 </html>
