Adicionada explicacao sobre estruturas condicionais com o EJS.

--- a/projetos/01-criando-uma-plataforma-de-perguntas-e-respostas-com-mysql/views/index.ejs
+++ b/projetos/01-criando-uma-plataforma-de-perguntas-e-respostas-com-mysql/views/index.ejs
@@ -13,5 +13,11 @@
 		<p>Nome: <%= nome %></p>
 		<p>Linguagem favorita: <%= lang %></p>
 		<p>Profissão: <%= profissao %> </p>
+
+		<% if (mostrarMensagem) { %>
+			<p>:) Tobias é esposo de Dinorá :)</p>
+		<% } else { %>
+			<p>A mensagem é um SEGREDO :O</p>
+		<% } %>
 	</body>
 </html>
