--- a/projetos/01-criando-uma-plataforma-de-perguntas-e-respostas-com-mysql/views/index.ejs
+++ b/projetos/01-criando-uma-plataforma-de-perguntas-e-respostas-com-mysql/views/index.ejs
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<link rel="stylesheet" href="/css/style.css">
 		<title>Guia perguntas</title>
 	</head>
 	<body>
@@ -25,5 +26,7 @@
 				<li><%= produto.nome %> = <%= produto.preco.toLocaleString('pt-BR', {style:"currency", currency:"BRL"}) %></li>
 			<% }) %>
 		</ol>
+
+		<img src="/img/montanhas.jpg" alt="Imagens de montanhas com névoas." title="Montanhas névoas.">
 	</body>
 </html>
