--- a/projetos/01-criando-uma-plataforma-de-perguntas-e-respostas-com-mysql/views/index.ejs
+++ b/projetos/01-criando-uma-plataforma-de-perguntas-e-respostas-com-mysql/views/index.ejs
@@ -4,10 +4,25 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+		<!-- Estilo interno -->
 		<link rel="stylesheet" href="/css/style.css">
+
+		<!-- Estilo bootstrap 4.3.1 -->
+		<link rel="stylesheet" href="/css/bootstrap.min.css">
+
 		<title>Guia perguntas</title>
 	</head>
 	<body>
+		<h1>Estilo do Bootstrap</h1>
 		
+		<!-- Script do jquery 3.3.1 -->
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+
+		<!-- Script do popper 1.14.7 -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+
+		<!-- Script bootstrap 4.3.1 -->
+		<script src="/js/bootstrap.min.js"></script>
 	</body>
 </html>
