--- a/projetos/01-criando-uma-plataforma-de-perguntas-e-respostas-com-mysql/views/perguntar.ejs
+++ b/projetos/01-criando-uma-plataforma-de-perguntas-e-respostas-com-mysql/views/perguntar.ejs
@@ -15,17 +15,22 @@
 	</head>
 	<body>
 		<div class="container">
-			<h3>Realizar pergunta</h3>
-			<hr>
-			<form>
-				<label>Título</label>
-				<input type="text" placeholder="Título" class="form-control">
-				<br>
-				<label>Descrição</label>
-				<textarea placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
-				<br>
-				<button class="btn btn-success">Enviar</button>
-			</form>
+			<div class="card">
+				<div class="card-header">
+					<h3>Realizar pergunta</h3>
+				</div>
+				<div class="card-body">
+					<form>
+						<label>Título</label>
+						<input type="text" placeholder="Título" class="form-control">
+						<br>
+						<label>Descrição</label>
+						<textarea placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
+						<br>
+						<button class="btn btn-success">Enviar</button>
+					</form>
+				</div>
+			</div>
 		</div>
 		
 		<!-- Script do jquery 3.3.1 -->
