Adicionada a navbar para a secao de pergunta.

--- a/projetos/01-criando-uma-plataforma-de-perguntas-e-respostas-com-mysql/views/perguntar.ejs
+++ b/projetos/01-criando-uma-plataforma-de-perguntas-e-respostas-com-mysql/views/perguntar.ejs
@@ -14,8 +14,13 @@
 		<title>Perguntar</title>
 	</head>
 	<body>
+		<nav class="navbar navbar-dark bg-primary">
+			<a href="/" class="navbar-brand">
+				<img src="/img/guia.png" alt="Guia do Programador">
+			</a>
+		</nav>
 		<div class="container">
-			<div class="card">
+			<div id="form-pergunta" class="card">
 				<div class="card-header">
 					<h3>Realizar pergunta</h3>
 				</div>
@@ -27,7 +32,7 @@
 						<label>Descrição</label>
 						<textarea placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
 						<br>
-						<button class="btn btn-success">Enviar</button>
+						<button class="btn btn-primary">Enviar</button>
 					</form>
 				</div>
 			</div>
