--- a/projetos/01-criando-uma-plataforma-de-perguntas-e-respostas-com-mysql/views/perguntar.ejs
+++ b/projetos/01-criando-uma-plataforma-de-perguntas-e-respostas-com-mysql/views/perguntar.ejs
@@ -1,50 +1,23 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-		<!-- Estilo bootstrap 4.3.1 -->
-		<link rel="stylesheet" href="/css/bootstrap.min.css">
-
-		<!-- Estilo interno -->
-		<link rel="stylesheet" href="/css/style.css">
-		
-		<title>Perguntar</title>
-	</head>
-	<body>
-		<nav class="navbar navbar-dark bg-primary">
-			<a href="/" class="navbar-brand">
-				<img src="/img/guia.png" alt="Guia do Programador">
-			</a>
-		</nav>
-		<div class="container">
-			<div id="form-pergunta" class="card">
-				<div class="card-header">
-					<h3>Realizar pergunta</h3>
-				</div>
-				<div class="card-body">
-					<form>
-						<label>Título</label>
-						<input type="text" placeholder="Título" class="form-control">
-						<br>
-						<label>Descrição</label>
-						<textarea placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
-						<br>
-						<button class="btn btn-primary">Enviar</button>
-					</form>
-				</div>
+<%- include ("partials/header.ejs") %>
+<body>
+	<%- include ("partials/navbar.ejs") %>
+	<div class="container">
+		<div id="form-pergunta" class="card">
+			<div class="card-header">
+				<h3>Realizar pergunta</h3>
+			</div>
+			<div class="card-body">
+				<form>
+					<label>Título</label>
+					<input type="text" placeholder="Título" class="form-control">
+					<br>
+					<label>Descrição</label>
+					<textarea placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
+					<br>
+					<button class="btn btn-primary">Enviar</button>
+				</form>
 			</div>
 		</div>
-		
-		<!-- Script do jquery 3.3.1 -->
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-
-		<!-- Script do popper 1.14.7 -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-
-		<!-- Script bootstrap 4.3.1 -->
-		<script src="/js/bootstrap.min.js"></script>
-	</body>
-</html>
+	</div>
+</body>
+<%- include ("partials/footer.ejs") %>
