--- a/projetos/01-criando-uma-plataforma-de-perguntas-e-respostas-com-mysql/views/perguntar.ejs
+++ b/projetos/01-criando-uma-plataforma-de-perguntas-e-respostas-com-mysql/views/perguntar.ejs
@@ -7,14 +7,14 @@
 				<h3>Realizar pergunta</h3>
 			</div>
 			<div class="card-body">
-				<form>
+				<form method="POST" action="/salvarPergunta">
 					<label>Título</label>
-					<input type="text" placeholder="Título" class="form-control">
+					<input type="text" class="form-control" name="ipt-titulo" placeholder="Título">
 					<br>
 					<label>Descrição</label>
-					<textarea placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
+					<textarea class="form-control" name="txt-descricao" placeholder="Descreva sua pergunta aqui"></textarea>
 					<br>
-					<button class="btn btn-primary">Enviar</button>
+					<button class="btn btn-primary">Perguntar</button>
 				</form>
 			</div>
 		</div>
