--- a/projetos/01-criando-uma-plataforma-de-perguntas-e-respostas-com-mysql/views/index.ejs
+++ b/projetos/01-criando-uma-plataforma-de-perguntas-e-respostas-com-mysql/views/index.ejs
@@ -1,6 +1,23 @@
 <%- include ("partials/header.ejs") %>
 <body>
 	<%- include ("partials/navbar.ejs") %>
-	<h1>Página inicial</h1>
+	<div class="container">
+		<br>
+		<h1>Perguntas</h1>
+		<hr>
+		<a href="/perguntar" class="btn btn-success">Perguntar</a>
+		<br>
+		<% perguntas.forEach(pergunta => { %>
+			<br>
+			<div class="card">
+				<div class="card-header">
+					<h3><%= pergunta.titulo %></h3>
+				</div>
+				<div class="card-footer">
+					<button class="btn btn-primary">Responder</button>
+				</div>
+			</div>
+		<% }) %>
+	</div>
 </body>
 <%- include ("partials/footer.ejs") %>
