--- a/projetos/01-criando-uma-plataforma-de-perguntas-e-respostas-com-mysql/views/pergunta.ejs
+++ b/projetos/01-criando-uma-plataforma-de-perguntas-e-respostas-com-mysql/views/pergunta.ejs
@@ -12,6 +12,14 @@
 				<%= pergunta.descricao %>
 			</div>
 		</div>
+		<br>
+		<form>
+			<h4>Responda</h4>
+			<label>Resposta</label>
+			<textarea name="txt-resposta" placeholder="Digite sua resposta" class="form-control"></textarea>
+			<br>
+			<button class="btn btn-primary">Responder</button>
+		</form>
 	</div>
 </body>
 <%- include ("partials/footer.ejs") %>
