Adicionado o campo de input que contera o valor de id que a pergunta a ser respondida contem.

--- a/projetos/01-criando-uma-plataforma-de-perguntas-e-respostas-com-mysql/views/pergunta.ejs
+++ b/projetos/01-criando-uma-plataforma-de-perguntas-e-respostas-com-mysql/views/pergunta.ejs
@@ -13,8 +13,9 @@
 			</div>
 		</div>
 		<br>
+		<h4>Responda</h4>
 		<form>
-			<h4>Responda</h4>
+			<input type="hidden" name="num_id" value="<%= pergunta.id %>">
 			<label>Resposta</label>
 			<textarea name="txt-resposta" placeholder="Digite sua resposta" class="form-control"></textarea>
 			<br>
