--- a/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/admin/categories/new.ejs
+++ b/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/admin/categories/new.ejs
@@ -9,7 +9,7 @@
 					<h2>Cadastro de categoria</h2>
 				</div>
 				<div class="card-body">
-					<form>
+					<form method="POST" action="/categories/save">
 						<label>Categoria:</label>
 						<input type="text" class="form-control" name="ipt-titulo" placeholder="Defina o título da categoria">
 						<br>
