--- a/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/admin/categories/index.ejs
+++ b/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/admin/categories/index.ejs
@@ -23,7 +23,7 @@
 						<td><%= category.title %></td>
 						<td><%= category.slug %></td>
 						<td>
-							<button class="btn btn-warning">Editar</button>
+							<a href="/admin/categories/edit/<%= category.id %>" class="btn btn-warning">Editar</a>
 
 							<!-- 
 								Esse form serve para que possamos enviar um id do registro a ser deletado.
