Adicionada a traducao para pt-br da biblioteca do tinymce.

--- a/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/admin/articles/new.ejs
+++ b/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/admin/articles/new.ejs
@@ -33,6 +33,7 @@
 		selector: "#txt-article",
 		plugins: [
 			"advlist autolink link image print preview hr searchreplace wordcount fullscreen insertdatetime media save table paste emoticons"
-		]
+		],
+		language: "pt_BR"
 	})
 </script>
