--- a/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/admin/articles/new.ejs
+++ b/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/admin/articles/new.ejs
@@ -9,7 +9,7 @@
 					<h2>Novo artigo</h2>
 				</div>
 				<div class="card-body">
-					<form method="POST" action="/categories/save">
+					<form method="POST" action="/articles/save">
 						<label>Título:</label>
 						<input type="text" class="form-control" name="ipt-title" placeholder="Defina o título do artigo">
 						<br>
