Adicionado codigo no template, para que a tabela de artigos seja populada por dados vindos da tabela articles, do banco de dados.

--- a/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/admin/articles/index.ejs
+++ b/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/admin/articles/index.ejs
@@ -18,7 +18,18 @@
 				</tr>
 			</thead>
 			<tbody>
-				
+				<% articles.forEach(article => { %>
+					<tr>
+						<td><%= article.id %></td>
+						<td><%= article.title %></td>
+						<td><%= article.slug %></td>
+						<td><%= article.categoryId %></td>
+						<td>
+							<a href="#" class="btn btn-warning">Editar</a>
+							<button type="button" class="btn btn-danger">Deletar</button>
+						</td>
+					</tr>
+				<% }) %>
 			</tbody>
 		</table>
 	</div>
