Feito um join, via sequelize, entre a tabela articles e a categories, para que seja exibido o titulo da categoria a qual um artigo pertence, ao inves de seu id de foreign key.

--- a/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/admin/articles/index.ejs
+++ b/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/admin/articles/index.ejs
@@ -23,7 +23,8 @@
 						<td><%= article.id %></td>
 						<td><%= article.title %></td>
 						<td><%= article.slug %></td>
-						<td><%= article.categoryId %></td>
+						<!-- Pega o título da categoria do artigo, possível graças ao JOIN feito na rota -->
+						<td><%= article.category.title %></td>
 						<td>
 							<a href="#" class="btn btn-warning">Editar</a>
 							<button type="button" class="btn btn-danger">Deletar</button>
