Linkados os artigos listados com seus respectivos botoes, para que o usuario seja redirecionado para a pagina onde ele possa ler cada artigo de forma integral. Tambem houve uma mudanca no template do artigo, onde o retiramos de dentro do elemento card.

--- a/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/index.ejs
+++ b/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/index.ejs
@@ -16,7 +16,7 @@
 					<h3><%= article.title %></h3>
 				</div>
 				<div class="card-body">
-					<a href="#" class="btn btn-info">Ler artigo</a>
+					<a href="/<%= article.slug %>" class="btn btn-info">Ler artigo</a>
 				</div>
 			</div>
 			<br>
