Adicionado codigo para corrigir a formatacao do corpo do artigo, para que os elementos html seja interpretados como tal. Tambem mudado a ordenacao do resultado de busca dos artigos do banco de dados, para mostrar os mais recentes primeiro.

--- a/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/article.ejs
+++ b/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/article.ejs
@@ -5,8 +5,12 @@
 	<div class="container">
 		<h1><%= article.title %></h1>
 		<hr>
-		<%= article.body %>
-			<br>
+		<!--
+		A utilização do "-", ao invés do "=", faz com que os elementos HTML de
+		dentro do artigo, sejam interpretrados como, de fato, um ELEMENTO e não um
+		TEXTO a ser renderizado na página.
+	  -->
+		<%- article.body %>
 	</div>
 </body>
 <%- include ("partials/footer.ejs") %>
