--- a/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/partials/home-navbar.ejs
+++ b/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/partials/home-navbar.ejs
@@ -6,5 +6,10 @@
 		<li class="nav-item">
 			<a href="/" class="nav-link">Início</a>
 		</li>
+		<% categories.forEach(category => { %>
+			<li class="nav-item">
+				<a href="/" class="nav-link"><%= category.title %></a>
+			</li>
+		<% }) %>
 	</ul>
 </nav>
