Adicionado codigo que busca o corpo do artigo de dentro do banco e mostre no template, dentro do textarea.

--- a/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/admin/articles/edit.ejs
+++ b/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/admin/articles/edit.ejs
@@ -11,13 +11,22 @@
 				<div class="card-body">
 					<form method="POST" action="/articles/save">
 						<label>Título:</label>
-						<input type="text" class="form-control" name="ipt-title" placeholder="Defina o título do artigo">
+						<input
+							type="text"
+							class="form-control"
+							name="ipt-title"
+							placeholder="Defina o título do artigo">
 						<br>
-						<textarea id="txt-article" name="txt-body" class="form-control" rows="15" placeholder="Escreva seu artigo aqui"></textarea>
+						<textarea
+							id="txt-article"
+							name="txt-body"
+							class="form-control"
+							rows="15"
+							placeholder="Escreva seu artigo aqui"><%- article.body %></textarea>
 						<label>Categoria</label>
 						<select name="slt-category" class="form-control">
 							<% categories.forEach(category => { %>
-								<option value="<%= category.id %>"><%= category.title %></option>>
+								<option value="<%= category.id %>"><%= category.title %></option>
 							<% }) %>
 						</select>
 						<br>
