--- a/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/admin/articles/new.ejs
+++ b/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/admin/articles/new.ejs
@@ -38,7 +38,7 @@
 		// Qual o ID do textarea que queremos que seja customizado pelo TinyMCE
 		selector: "#txt-article",
 		plugins: [
-			"advlist autolink link image print preview hr searchreplace wordcount fullscreen insertdatetime media save table paste emoticons"
+			"lists advlist autolink link image print preview hr searchreplace wordcount fullscreen insertdatetime media save table paste emoticons"
 		],
 		language: "pt_BR"
 	})
