--- a/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/index.ejs
+++ b/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/index.ejs
@@ -10,6 +10,7 @@
 			<p>Um curso completo de Node.js e suas tecnologias.</p>
 			<a class="btn btn-primary btn-lg" href="https://www.udemy.com/course/formacao-nodejs/" role="button" target="_blank">Formação Node.js</a>
 		</div>
+		<hr>
 		<% articles.forEach(article => { %>
 			<div class="card">
 				<div class="card-header">
@@ -21,6 +22,17 @@
 			</div>
 			<br>
 		<% }) %>
+		<div class="row justify-content-center">
+			<nav aria-label="Page navigation example">
+			  <ul class="pagination">
+			    <li class="page-item"><a class="page-link" href="#">Anterior</a></li>
+			    <li class="page-item active"><a class="page-link" href="#">1</a></li>
+			    <li class="page-item"><a class="page-link" href="/articles/page/2">2</a></li>
+			    <li class="page-item"><a class="page-link" href="#">3</a></li>
+			    <li class="page-item"><a class="page-link" href="/articles/page/2">Próximo</a></li>
+			  </ul>
+			</nav>
+		</div>
 	</div>
 </body>
 <%- include ("partials/footer.ejs") %>
