--- a/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/admin/users/create.ejs
+++ b/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/admin/users/create.ejs
@@ -1,1 +1,21 @@
-<h1>Meu formulário</h1>
+<%- include ("../../partials/header.ejs") %>
+<body>
+	<%- include ("../../partials/navbar.ejs") %>
+	<div class="container">
+		<div class="card mt-4">
+			<div class="card-header">
+				<h3>Criação de usuário</h3>
+			</div>
+			<div class="card-body">
+				<form action="/users/create" method="POST">
+					<label>Email</label>
+					<input type="email" name="ipt-email" class="form-control" placeholder="email@exemplo.com">
+					<label class="mt-2">Senha</label>
+					<input type="password" name="ipt-password" class="form-control">
+					<button type="submit" class="btn btn-success btn-block mt-2">Cadastrar</button>
+				</form>
+			</div>
+		</div>
+	</div>
+</body>
+<%- include ("../../partials/footer.ejs") %>
