Criada a rota e o template para a secao de atualizacao de um usuario. Tambem persistimos os novos dados no banco.

--- a/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/admin/users/index.ejs
+++ b/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/views/admin/users/index.ejs
@@ -19,7 +19,7 @@
 					<td><%= user.id %></td>
 					<td><%= user.email %></td>
 					<td>
-						<a href="#" class="btn btn-warning">Atualizar</a>
+						<a href="/admin/users/edit/<%= user. id %>" class="btn btn-warning">Atualizar</a>
 						<form
 							id="form-delete"
 							action="/admin/users/delete"
