--- a/projetos/03-conversor-de-excel-para-html-e-pdf-com-nodejs/views/table.ejs
+++ b/projetos/03-conversor-de-excel-para-html-e-pdf-com-nodejs/views/table.ejs
@@ -4,6 +4,14 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<style>
+		table, th, td {
+			border: 1px solid black;
+		}
+		th, td {
+			padding: 5px 10px;
+		}
+	</style>
 	<title>Tabela</title>
 </head>
 <body>
