--- a/14-socket-io-2-introducao/mini-projetos/views/index.ejs
+++ b/14-socket-io-2-introducao/mini-projetos/views/index.ejs
@@ -8,5 +8,10 @@
 </head>
 <body>
 	<h1>Teste</h1>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+	<script>
+		const socket = io('http://localhost:4000')
+	</script>
 </body>
 </html>
