Criado evento de disconexao de um cliente da aplicacao.

--- a/14-socket-io-2-introducao/mini-projetos/views/index.ejs
+++ b/14-socket-io-2-introducao/mini-projetos/views/index.ejs
@@ -16,6 +16,11 @@
 	<script>
 		const socket = io('http://localhost:4000')
 
+		// Evento de desconexão
+		socket.on('disconnect', () => {
+			console.log('Desconectado')
+		})
+
 		// Cria um evento para ser enviado para o servidor
 		socket.emit('boasVindas', {
 			nome: 'Tobias de Oliveira'
