--- a/projetos/07-chat-com-socket-io/views/index.ejs
+++ b/projetos/07-chat-com-socket-io/views/index.ejs
@@ -8,10 +8,10 @@
 </head>
 <body>
 	<h1>Chat do Guia</h1>
-	<div id="chat">
+	<div id="divChat">
 
 	</div>
-	<input type="text" id="iptMsg"><br>
+	<textarea id="textMsg" cols="30" rows="10"></textarea><br>
 	<input type="text" id="iptUsername" placeholder="Seu nome de usuário"><br>
 	<button type="button" id="btnEnviar">Enviar</button><br>
 
@@ -23,14 +23,28 @@
 			console.log('Desconectado')
 		})
 
+		const textMsg = document.querySelector('textarea#textMsg')
+		const iptUsername = document.querySelector('input#iptUsername')
+		const divChat = document.querySelector('div#divChat')
+
 		const btnEnviar = document.querySelector('button#btnEnviar')
 		btnEnviar.addEventListener('click', enviar)
 
-		function enviar() {
-			let iptMsg = document.querySelector('input#iptMsg')
-			let iptUsername = document.querySelector('input#iptUsername')
+		socket.on('showmsg', data => {
+			let spanUsername = document.createElement('span')
+			spanUsername.innerHTML = `<strong>${ data.username }: </strong>`
 
-			let msg = iptMsg.value
+			let pMsg = document.createElement('p')
+			pMsg.appendChild(spanUsername)
+			pMsg.innerHTML += data.msg
+
+			divChat.appendChild(pMsg)
+		})
+
+		function enviar() {
+			
+
+			let msg = textMsg.value
 			let username = iptUsername.value
 
 			socket.emit('msg', { msg, username })
