--- a/projetos/07-chat-com-socket-io/views/index.ejs
+++ b/projetos/07-chat-com-socket-io/views/index.ejs
@@ -5,15 +5,29 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Projeto 07 - Chat com Socket.IO</title>
+
+	<!-- CDN Bootstrap 4.5.3 -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+	<style>
+		#divChat {
+			height: 300px;
+		}
+	</style>
 </head>
 <body>
-	<h1>Chat do Guia</h1>
-	<div id="divChat">
-
-	</div>
-	<textarea id="textMsg" cols="30" rows="10"></textarea><br>
-	<input type="text" id="iptUsername" placeholder="Seu nome de usuário"><br>
-	<button type="button" id="btnEnviar">Enviar</button><br>
+	<header class="container">
+		<h1>Chat do Guia</h1>
+	</header>
+	<main class="container d-flex flex-column">
+		<div id="divChat" class="bg-light p-3 overflow-auto mb-3">
+	
+		</div>
+		<textarea id="textMsg" class="form-control mb-3" cols="20" rows="5" placeholder="Digite sua mensagem..."></textarea>
+		<input type="text" id="iptUsername" class="form-control mb-3" placeholder="Seu nome de usuário">
+		<button type="button" id="btnEnviar" class="btn btn-primary align-self-end">Enviar</button>
+	</main>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
 	<script>
