Exibido todas as consultas, cadastradas no banco, dentro do calendario.

--- a/projetos/08-sistema-de-agendamento-com-mongodb/views/index.ejs
+++ b/projetos/08-sistema-de-agendamento-com-mongodb/views/index.ejs
@@ -18,7 +18,12 @@
 		let calendar = new FullCalendar.Calendar(divCalendar, {
 			// Forma de visualização de um calendário.
 			initialView: 'dayGridMonth',
-			locale: 'pt-br'
+			locale: 'pt-br',
+			/*
+			Informa a rota, que retorna um array, e que será usado para popular o
+			calendário.
+			*/
+			events: 'calendar'
 		})
 		calendar.render()
 	</script>
